# Game-Engine-Demo

./: .gitignore  README.md
dependency/assimp/lib/: assimp-vc142-mtd.lib
dependency/glad/include/glad/: glad.h
dependency/glad/src/: glad.c
dependency/glfw/lib/: glfw3.lib
dependency/imgui/src/: imgui.cpp  imgui_demo.cpp  imgui_widgets.cpp
resource/hooligan/: scene.gltf
resource/rhino/: scene.gltf
source/: CMakeLists.txt  lecture3-assimpmodel.cpp  main.cpp  model_shader.frag  model_shader.vert  utility.cpp  utility.h  week2-imgui.cpp
